2001-06-11  Clint Adams  <clint@zsh.org>

	* 14843: Src/Modules/tcp.c, Src/Modules/zftp.c:
	introduce tcp_close and use it to close control fd.

2001-06-11  Sven Wischnowsky  <wischnow@zsh.org>

	* 14841: Completion/Base/Utility/_values, Src/Zle/computil.c:
	new word parsing for compvalues; this should now handle empty
	separators correctly, as far as it is possible

2001-06-11  Peter Stephenson  <pws@csr.com>

	* 14840: Doc/Zsh/options.yo: document search behaviour with
	PATH_DIRS option.

2001-06-10  Clint Adams  <clint@zsh.org>

	* 14830: config.guess, config.sub:
	upgrade to GNU's June 5 and 8 versions,
	respectively.

2001-06-09  Bart Schaefer  <schaefer@zsh.org>

	* unposted (see 14826): Test/C02cond.ztst: Force group of new
	directory created for file-mode tests to be owned by the current
	effective group.

	* 14827: Src/parse.c, Src/utils.c: Move zwcstat() to parse.c
	where it can be wrapped in #ifdef USE_MMAP.

	* 14824: Test/comptest: Avoid echotc (improvement on 14792).

2001-06-08  Clint Adams  <clint@zsh.org>

	* 14815: Src/utils.c: actually check the filename of
	the dump.

	* 14813: zshconfig.ac, Src/parse.c, Src/utils.c, Src/zsh.h:
	try to autoload functions from digest files that are deleted
	but still open.

2001-06-08  Bart Schaefer  <schaefer@zsh.org>

	* 14796: zshconfig.ac: More reliable BROKEN_KILL_ESRCH test.

2001-06-07  Bart Schaefer  <schaefer@zsh.org>

	* 14792: Test/comptest: Don't import the current terminal type for
	the zpty terminal, because the current terminal might not be able
	to run ZLE (e.g., emacs shell mode).

	* 14792: Src/Modules/tcp.h, Src/Modules/zftp.c: Shuffle around
	several #include directives to get the sockaddr_in definition in
	all the places it's needed.

	* 14712: Doc/Zsh/builtins.yo: Improve appearance of long hanging
	paragraph tag for the "read" builtin.

	* 14578: Src/Modules/termcap.c: Handle vagaries of tgetflag()
	return value in new function ztgetflag().
